--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "jansenfelipe/omr",
+  "name": "BbgnsurfTech/omr",
   "description": "Optical Mark Recognition from PHP",
   "type": "library",
   "license": "MIT",
@@ -25,12 +25,12 @@
   },
   "autoload": {
     "psr-4": {
-      "JansenFelipe\\OMR\\": "src/"
+      "BbgnsurfTech\\OMR\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "JansenFelipe\\OMR\\Tests\\": "tests/"
+      "BbgnsurfTech\\OMR\\Tests\\": "tests/"
     }
   },
   "extra": {
